Don't skip display: contents nodes in TextIterator.

Elements with display: contents may have rendered descendants and, as such,
TextIterator should be able to find it.

BUG=734399

Change-Id: I6196c858cbc4338c65eac47bbe552c3fa96c8f0e
Reviewed-on: https://chromium-review.googlesource.com/541308
Reviewed-by: Rune Lillesveen <rune@opera.com>
Commit-Queue: Emilio Cobos Álvarez <ecobos@igalia.com>
Cr-Commit-Position: refs/heads/master@{#481137}
Former-commit-id: 240efbe686c1a0ff29dd3453ba5d048a979266c5